# invoice-generator

./: .gitignore  README.md  generate-invoices.py  main.py  pyproject.toml  requirements.txt
data/: students.json
src/: api.py  calendar_api.py  constants.py  data_loader.py  event_processing.py  format_outputs.py  formatting.py  invoice_generator.py  logging_config.py  models.py  outputs.py  schema.py  utils.py  validation.py
styles/: styles.css
template/: invoice-template.html
templates/: invoice-template.html
tests/: conftest.py  test_calendar_api.py  test_data_loader.py  test_event_processing.py  test_formatting.py  test_invoice_generator.py  test_logging_config.py  test_models.py  test_schema.py  test_utils.py
